--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "linter": "eslint . --ext jsx --ext js"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
