--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "node-sass-chokidar": "^1.2.1",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.2",
+    "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-form": "^3.4.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-select": "^1.2.1"
+    "react-select": "^1.2.1",
+    "react-test-renderer": "^16.3.2",
+    "react-toastify": "^4.0.0-rc.5"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
