--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "flow-bin": "^0.70.0",
-    "jest": "^22.4.3"
+    "flow-bin": "^0.70.0"
   }
 }
