continuous deployment setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: node_js
 node_js:
-  - "8"
+- '8'
+before_install:
+- openssl aes-256-cbc -K $encrypted_5d2a9bb64424_key -iv $encrypted_5d2a9bb64424_iv
+  -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/build latata@t2.latata.pl:/home/latata/t2/
+  on:
+    branch: master
