--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
-- apt-get install rsync
+- sudo apt-get install rsync
 script: yarn test && yarn build
 deploy:
   provider: script
