--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,10 @@ before_install:
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
-- sudo apt-get install rsync
 script: yarn test && yarn build
 deploy:
   provider: script
   skip_cleanup: true
-  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/build $TRAVIS_BUILD_DIR/backend latata@t2.latata.pl:/home/latata/t2/
+  script: scp -r $TRAVIS_BUILD_DIR/build $TRAVIS_BUILD_DIR/backend latata@t2.latata.pl:/home/latata/t2/
   on:
     branch: master
