--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "npm-run-all build-css build-js",
     "test": "npm run build-css && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "linter": "eslint . --ext jsx --ext js"
+    "linter": "eslint src --ext jsx --ext js"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
