--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script: yarn test && yarn build
 deploy:
   provider: script
   skip_cleanup: true
-  script: scp -r $TRAVIS_BUILD_DIR/build $TRAVIS_BUILD_DIR/backend latata@t2.latata.pl:/home/latata/t2/ && ssh latata@t2.latata.pl 'cd /home/latata/t2/backend && npm install && sudo pm2 reload server'
+  script: ssh latata@t2.latata.pl 'rm -rf /home/latata/t2/backend' && scp -r $TRAVIS_BUILD_DIR/build $TRAVIS_BUILD_DIR/backend latata@t2.latata.pl:/home/latata/t2/ && ssh latata@t2.latata.pl 'cd /home/latata/t2/backend && npm install && sudo pm2 reload server'
   on:
     branch: master
