--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "npm-run-all -p watch-css start-js start-backend",
+    "start-backend": "node backend/server.js",
     "flow": "flow",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
