--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^6.8.0"
   },
   "dependencies": {
+    "dotenv": "^5.0.1",
     "form-data": "^2.3.2",
     "iconv-lite": "^0.4.19",
     "js-sha256": "^0.9.0",
