--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-hyperscript": "^3.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-select": "^1.2.1",
+    "react-select": "latata/react-select",
     "react-test-renderer": "^16.3.2",
     "react-toastify": "^4.0.0-rc.5"
   },
